--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "mime": "^1.3.4",
+    "multer": "^1.2.0",
     "socket.io": "^1.4.8",
     "sqlite3": "^3.1.4",
     "ws": "^1.1.1"
