--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.14.0",
     "mime": "^1.3.4",
     "multer": "^1.2.0",
+    "sharp": "^0.16.0",
     "socket.io": "^1.4.8",
     "sqlite3": "^3.1.4",
     "ws": "^1.1.1"
