--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "4.2.2",
+    "npm": "2.14.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
